Navigation Alignment Fixed

--- a/src/Styles/FloatBtn.scss
+++ b/src/Styles/FloatBtn.scss
@@ -1,7 +1,7 @@
 @import "./Vars.scss";
 .floatbtn-container{
     position: fixed;
-    z-index: 1000;
+    z-index: 49;
     bottom: 10px;
     display: inherit;
     .btn{
