--- a/src/Styles/Navigation.scss
+++ b/src/Styles/Navigation.scss
@@ -7,7 +7,7 @@
 }
 
 .site-logo-img{
-    height:90px;
+    height:auto;
     width: 300px;
 }
 
@@ -81,6 +81,19 @@
 }
 
 @media only screen and (max-width: 992px) {
+    .primary-nav > ul > li > ul > li{
+        font-size: 15px !important;
+        line-height: 15px !important;
+        position: relative;
+        &::after{
+            content: " ";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: 0;
+            background-color: rgba($color: $color-light, $alpha: 0.05)
+        }
+    }
     .site-navbar {
         height: 100px;
         background-color: $color-light;
@@ -1413,7 +1426,7 @@ img {
 
 @media only screen and (max-width: 991px) {
     .primary-nav>ul>li>ul {
-        padding: 0 0 0 2em;
+        padding: 0 0 0 0.5em;
         -webkit-columns: 2;
         columns: 2;
         margin-bottom: 2em
@@ -1564,6 +1577,10 @@ img {
         -webkit-transform: translateY(-150px);
         transform: translateY(-150px)
     }
+}
+
+.popout-is-active{
+    z-index: 50;
 }
 
 .portfolio-wrapper.popout-is-active {
